--- a/plugins/plugin-tutorials/web/css/tutorials.css
+++ b/plugins/plugin-tutorials/web/css/tutorials.css
@@ -10,7 +10,7 @@ body.tutorial-in-progress.tutorial-is-fullscreen tab {
     flex: 0;
     min-height: 0;
     overflow: hidden;
-    background-color: var(--color-ui-05);
+    background-color: var(--color-ui-03);
     color: var(--color-text-01);
     box-shadow: 0 0 1ex var(--color-ui-02);
     transition: all 300ms ease-in-out;
